# Ozzy

./: CMakeLists.txt
include/: board.h  castling.h  color.h  console.h  consolecolor.h  consoleutils.h  evaluation.h  feninfo.h  fenreader.h  flag.h  game.h  generator.h  magicmoves.h  move.h  moveinfo.h  movelist.h  ozzy.h  perft.h  piece.h  search.h  square.h  utils.h
src/: board.cpp  console.cpp  consoleutils.cpp  evaluation.cpp  feninfo.cpp  fenreader.cpp  game.cpp  generator.cpp  magicmoves.cpp  move.cpp  moveinfo.cpp  movelist.cpp  ozzy.cpp  perft.cpp  search.cpp  square.cpp  utils.cpp
